--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ header{
     color: #f2f2f2;
     padding: 30px;
     font-weight: 300;
+    flex-wrap: wrap;
     /* border: solid 1px rgb(14, 13, 13); */
 }
 main{
@@ -27,6 +28,7 @@ nav, nav ul{
     justify-content: center;
     gap: 50px;
     text-wrap: nowrap;
+    flex-wrap: wrap;
 }
 ul{
     list-style: none;
@@ -71,18 +73,23 @@ nav a:hover{
     color: aliceblue;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 .hero .details{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
+    gap: 15px;
     width: 70%;
     color:white !important;
 }
 
 .hero .details h1{
     font-size: 45px;
+}
+.hero .details h2{
+  color: #F37021;
+  font-size: 35px;
 }
 
 .hero .details h3{
@@ -106,6 +113,7 @@ nav a:hover{
     width: 400px;
     height: 400px;
     border-radius: 50%;
+    aspect-ratio: 1;
     background-color: #D9D9D9;
 }
 
@@ -118,11 +126,13 @@ nav a:hover{
     justify-content: center;
     padding:70px 80px;
     gap: 20px;
+    flex-wrap: wrap;
+    text-align: center;
 }
 .skill-container{
     background-color: white;
-    width:1273px;
-    height: 274px;
+    /* width:1273px; */
+    /* height: 274px; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -167,14 +177,17 @@ nav a:hover{
     font-weight: 300;
     color: #172a37;
 }
+
 /* certifications */
 #certifications{
-    display: flex;
-    background: linear-gradient(to right, #fef5e5,white, #e5e6fe);
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  text-align: center;
+  padding: 60px 20px;
+  background: linear-gradient(to right, #fef5e5,white, #e5e6fe);
+  height: 100%;
 }
 .linkedin{
     background: #f37021;
@@ -183,7 +196,7 @@ nav a:hover{
     width: 310px;
     border-radius: 8px;
     border: none;
-    margin-block: 50px;
+    margin-block: 30px;
     font-size: larger;
 }
 .linkedin a{
@@ -191,55 +204,66 @@ nav a:hover{
     color: white;
 }
 #certifications .cards-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 1273px;
-    height: 357px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin-top: 20px;
 }
-#certifications .card{
-    display: flex;
-    flex-direction: column;
-    width: 405px;
-    height: 100%;
-    border-radius: 12px;
-    background-color: white;
-    box-shadow: 2px 4px 2px rgb(128, 125, 125);
-    /* justify-content: space-between; */
+
+#certifications .card {
+  display: flex;
+  flex-direction: column;
+  background: white;
+  width: 100%;
+  max-width: 400px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: left;
 }
-#certifications .card-img{
-    width: 100%;
-    height: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #D9351A;
-    background-color: #C4C4C4;
-    border-radius: 12px 12px 0px 0px;
+
+#certifications .card-image {
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  padding: 16px;
+  text-align: center;
 }
-#certifications .card-description{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 20px;
-    height: 40%;
-    width: 100%;
+
+#certifications .project-img {
+  border-radius: 8px;
+  width: 100%;
+  height: auto;
+  max-width: 384px; /* w-96 */
+  max-height: 256px; /* h-64 */
 }
-.card-description span, .card-description p{
-    font-weight: 500;
-    font-size: 16px;
+
+/* Card content styling */
+#certifications  .card-content {
+  padding: 16px;
 }
-.card-description h4{
-    font-weight: 600;
-    font-size: 24px;
+
+#certifications  .project-title {
+  font-weight: bold; /* font-bold */
+  font-size: 1.125rem; /* text-lg */
+  margin-top: 32px; /* mt-8 */
 }
+
+#certifications .card-content .description {
+  margin-top: 8px; /* mt-2 */
+  font-size: 1rem;
+}
+
 /* Projects */
 
 #projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
   text-align: center;
   padding: 60px 20px;
   background: linear-gradient(to right, #fef5e5,white, #e5e6fe);
+  height: 100%;
 }
 
 .projects-container {
@@ -252,11 +276,15 @@ nav a:hover{
 
 .project-card {
   background: white;
-  width: 300px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 420px;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: left;
+  gap: 12px;
 }
 
 .project-link {
@@ -268,10 +296,20 @@ nav a:hover{
   border-radius: 10px;
 }
 
-.project-details h3 {
-  margin: 10px 0;
+
+.project-details a{
+  color: #000;
+}
+.project-details span{
+  /* font-weight: bold; */
+  color: #F37021;
+}
+.project-details ul{
+  list-style: disc;
+  padding: 15px;
 }
 
+/* Education */
 #education {
   text-align: center;
   padding: 60px 20px;
@@ -326,10 +364,13 @@ nav a:hover{
 }
 
 #contact {
+  display: flex;
+  flex-direction: column;
   text-align: center;
   padding: 60px 20px;
   background: #172a37;
   color: white;
+  flex-wrap: wrap;
 }
 
 .contact-container {
@@ -337,6 +378,7 @@ nav a:hover{
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  flex-wrap: wrap;
 }
 
 .contact-btn {
