--- a/style.css
+++ b/style.css
@@ -583,7 +583,7 @@ nav a:hover{
       padding: 40px 20px;
   }
   .hero .details{
-    margin-top: 100dvh;
+    margin-top: 500px;
   }
   .hero .details h1 {
       font-size: 24px;
