--- a/style.css
+++ b/style.css
@@ -295,7 +295,13 @@ nav a:hover{
   font-weight: bold; 
   font-size: 1.125rem; 
 }
-
+#certifications .project-title a{
+  text-decoration: none;
+  color: black;
+}
+#certifications .project-title a:hover{
+  text-decoration: underline;
+}
 #certifications .card-content .description {
   margin-top: 8px; /* mt-2 */
   font-size: 1rem;
@@ -476,7 +482,9 @@ nav a:hover{
   background: #ce611d;
   transform: translateY(-10px);
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+  text-decoration: underline;
 }
+
 /* Media Queries for Responsiveness */
 
 /* For devices like tablets */
